Complete new BucketEditor component using react-modal Add bucket patching API Refactor and separate bucket and transaction augmentation (i.e. wrapping props in correct datatypes) Encapsulate API bucket query for reuse in patch response

--- a/sludge.css
+++ b/sludge.css
@@ -11,6 +11,14 @@ html {
 	background: #f9f9f9
 }
 
+label {
+	display: block;
+}
+
+label input {
+	float: right;
+}
+
 .left {
 	float: left
 }
